--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "firebase-admin": "^13.4.0",
     "node-fetch": "^3.3.2"
   }
