--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "@huggingface/inference": "^4.3.2",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
     "firebase-admin": "^13.4.0",
