--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "type": "module",
   "dependencies": {
     "@huggingface/inference": "^4.3.2",
     "express": "^5.1.0",
@@ -6,4 +7,4 @@
     "firebase-admin": "^13.4.0",
     "node-fetch": "^3.3.2"
   }
-}
+} 
