--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
     "port": 3000,
     "recaptcha_site_key": "6Leg9HgrAAAAAJcPSWr8sNrobVZZpxwWjuRjpEy-",
     "recaptcha_secret_key": "6Leg9HgrAAAAAP3YjmkJ1Y6LFoZxwTrItT17AAwN",
-    "hugging_face_key": "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"
+    "hugging_face_key": "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",
+    "admin_emails": ["admin@rxo.me", "fj@rxo.me"]
 }
